# xGate

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  test.yml
data/: README.md
data/config/: mini.toml.example
docker/proxy-bridge/: Dockerfile  http_proxy.py
docs/: MCP_TOOLS.md
examples/: README.md  curl_quickstart.sh  multi_account_admin.py  openai_basic.py  openai_streaming.py  sticky_binding.py  x_account_label.py
src/mini_grok_api/: __init__.py  accounts.py  auth_session.py  config.py  curl_import.py  db.py  grok_client.py  grok_files_client.py  har_import.py  image_stream.py  main.py  mcp_server.py  mcp_session.py  models.py  monitor.py  openai_compat.py  schemas.py  signed_url.py  task_queue.py  ws_gateway.py
src/mini_grok_api/static/: index.html
tests/: conftest.py  test_account_pool.py  test_account_pool_integration.py  test_admin_config_sync.py  test_auth.py  test_conversation_binding.py  test_curl_import.py  test_files_proxy.py  test_get_side_effects.py  test_grok_events.py  test_har_import.py  test_image_stream_account_label.py  test_login_rate_limit.py  test_openai_compat.py  test_p2_techdebt.py  test_phase2_account_label.py  test_quota_aware_selection.py  test_sast_round3.py  test_sast_round5.py  test_signed_url.py  test_tool_calls.py  test_x_account_label.py
